--- a/package.json
+++ b/package.json
@@ -2,26 +2,17 @@
   "name": "blonding-app-v2.1",
   "version": "2.1.0",
   "private": true,
-  "type": "module",
-  "engines": {
-    "node": ">=18"
-  },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "generate-lessons": "node scripts/generate-md.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "react-markdown": "^8.0.7"
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
-  "devDependencies": {
-    "vite": "^5.0.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23"
+  "engines": {
+    "node": ">=18"
   }
 }
