--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
-   "next": "14.2.3",
-  "react": "18.3.1",
-  "react-dom": "18.3.1",
-   "react-markdown": "9.0.1"
+ "dependencies": {
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-markdown": "9.0.1",
+    "tailwindcss": "3.4.1",
+    "postcss": "8.4.38",
+    "autoprefixer": "10.4.19"
   },
-  "engines": {
-    "node": ">=18"
+  "devDependencies": {
   }
-}
