--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate-lessons": "node scripts/generate-md.js"
   },
   "dependencies": {
     "next": "14.2.3",
@@ -14,7 +15,9 @@
     "react-markdown": "9.0.1",
     "tailwindcss": "3.4.1",
     "postcss": "8.4.38",
-    "autoprefixer": "10.4.19"
+    "autoprefixer": "10.4.19",
+    "mammoth": "^1.7.0",
+    "image-type": "^5.2.0"
   },
   "devDependencies": {
   }
