--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "tailwindcss": "3.4.1",
     "postcss": "8.4.38",
     "autoprefixer": "10.4.19",
-    "mammoth": "^1.7.0"
+    "mammoth": "^1.7.0",
+    "sharp": "^0.33.4",
+    "next-pwa": "^5.6.0",
+    "lru-cache": "^10.2.2"
   },
   "devDependencies": {
   }
