--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "blonding-app-v2.1",
   "version": "2.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -20,8 +19,8 @@
     "mammoth": "^1.7.0",
     "sharp": "^0.33.4",
     "next-pwa": "^5.6.0",
-    "lru-cache": "^10.2.2"
+    "lru-cache": "^10.2.2",
+    "@tailwindcss/typography": "^0.5.13"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
