--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "generate-lessons": "node scripts/generate-md.js"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "generate-lessons": "node scripts/generate-md.js",
+  "generate-quizzes": "node scripts/generate-quizzes.js",
+  "generate-all": "npm run generate-lessons && npm run generate-quizzes"
+},
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
