--- a/.github/workflows/generate-content.yml
+++ b/.github/workflows/generate-content.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     
     # Добавляем токен HF как переменную окружения для ВСЕЙ 'job'
-    # Это чистая практика и решает проблемы с отступами
     env:
       HF_TOKEN: ${{ secrets.HF_TOKEN }}
 
@@ -50,8 +49,13 @@ jobs:
             git push
           fi
           
-      # Шаг 'Trigger Vercel redeploy' УДАЛЕН.
+      # Шаг 'Trigger Vercel redeploy' (который был на строке 55) УДАЛЕН.
       # Vercel будет автоматически запущен шагом 'git push' выше.
 ```eof
 
-Этот код нужно вставить в файл `.github/workflows/generate-content.yml` в вашем репозитории. Он должен исправить ошибку.
+**Почему это сработает:**
+* Шаг `Trigger Vercel redeploy` (который был на строке 55) был необязательным.
+* Ваш Vercel **в любом случае** автоматически начнет сборку, как только увидит `git push` из предыдущего шага.
+* Удалив этот шаг, мы удалили строку, которая вызывала ошибку синтаксиса.
+
+Пожалуйста, попробуйте этот код. Он должен исправить ошибку.
