--- a/package.json
+++ b/package.json
@@ -1,211 +1,45 @@
-### Исправления и обновленный код
-
-Привет! Спасибо за отзыв — рад, что обновления понравились. Ты прав насчёт ошибки в пути для quiz-файлов. В оригинальном проекте (на основе PDF) quiz назван `lesson-1-quiz.json`, и slug урока, вероятно, формируется как "lesson-1" (если файл урока — "lesson-1.docx"). Поэтому правильный путь — `${slug}-quiz.json` (т.е. "lesson-1-quiz.json"), а не `lesson-${slug}-quiz.json` (что дало бы "lesson-lesson-1-quiz.json"). Это критическая ошибка, которая ломает загрузку тестов для динамических слуг.
-
-Я исправил это в `src/pages/Test/[slug].tsx`. Также добавил пару мелких улучшений:
-- В getStaticProps: добавлена проверка на существование файла (если quiz не найден, quiz = [] и сообщение "Тест не найден").
-- В UI: если quiz.length === 0, показать сообщение.
-- Обновил логику score для ясности.
-
-Вот полный код для этого файла (скопируй и замени). Если нужно обновить другие файлы (например, package.json с актуальными версиями на 08.11.2025), скажи — могу предоставить.
-
-#### src/pages/Test/[slug].tsx
-```tsx
-import React, { useState } from 'react';
-import Link from 'next/link';
-import fs from 'fs';
-import path from 'path';
-
-interface QuizItem {
-  question: string;
-  options: string[];
-  correctAnswer: string;
-  explanation: string;
-}
-
-interface TestPageProps {
-  quiz: QuizItem[];
-  lessonSlug: string;
-}
-
-function TestPage({ quiz, lessonSlug }: TestPageProps) {
-  const [selectedAnswers, setSelectedAnswers] = useState<Record<number, string>>({});
-
-  const handleAnswerClick = (questionIndex: number, selectedOption: string) => {
-    if (selectedAnswers[questionIndex] !== undefined) {
-      return;
-    }
-    setSelectedAnswers({
-      ...selectedAnswers,
-      [questionIndex]: selectedOption,
-    });
-  };
-
-  const resetQuiz = () => {
-    setSelectedAnswers({});
-  };
-
-  const getButtonClass = (questionIndex: number, option: string) => {
-    const isSelected = selectedAnswers[questionIndex] === option;
-    const isCorrect = quiz[questionIndex]?.correctAnswer === option;
-    const answerGiven = selectedAnswers[questionIndex] !== undefined;
-
-    if (!answerGiven) {
-      return 'bg-slate-50 border-slate-200 text-gray-700 hover:bg-slate-100';
-    }
-    if (isCorrect) {
-      return 'bg-green-100 border-green-300 text-green-800';
-    }
-    if (isSelected && !isCorrect) {
-      return 'bg-red-100 border-red-300 text-red-800';
-    }
-    return 'bg-slate-50 border-slate-200 text-gray-700 opacity-70';
-  };
-
-  const correctCount = quiz.filter((item, index) => selectedAnswers[index] === item.correctAnswer).length;
-  const total = quiz.length;
-  const allAnswered = Object.keys(selectedAnswers).length === total;
-
-  if (quiz.length === 0) {
-    return (
-      <div className="max-w-3xl mx-auto p-4 md:p-8 text-center">
-        <h1 className="text-2xl font-bold mb-4">Тест для урока "{lessonSlug}" не найден</h1>
-        <p className="text-gray-600">Добавьте файл {lessonSlug}-quiz.json в public/content/quizzes/</p>
-        <Link href="/" className="mt-4 inline-block text-blue-600 hover:underline">Вернуться на главную</Link>
-      </div>
-    );
+/**
+ * Централизованная функция для вызовов Hugging Face API.
+ */
+export async function callHF(inputs, { hfToken, model, maxTokens, temperature }) {
+  if (!hfToken) {
+    throw new Error("callHF: HF_TOKEN (hfToken) is missing");
   }
 
-  return (
-    <div className="max-w-3xl mx-auto p-4 md:p-8">
-      <div className="mb-6">
-        <Link
-          href="/"
-          className="inline-flex items-center text-sm font-medium text-blue-600 hover:text-blue-800 transition-colors"
-        >
-          {'<'} Вернуться на главную
-        </Link>
-      </div>
+  const url = "https://router.huggingface.co/vl/chat/completions";
 
-      <header className="text-center mb-8">
-        <h1 className="font-heading text-3xl font-bold text-gray-900 mb-2">
-          Тест: {lessonSlug}
-        </h1>
-        <p className="text-lg text-gray-600">
-          Проверьте свои знания.
-        </p>
-      </header>
+  // Промпт 'inputs' от generate-quizzes.js уже содержит все инструкции.
+  // Поэтому мы просто передаем его как есть.
+  const body = {
+    model: model || "meta-llama/Meta-Llama-3-8B-Instruct",
+    messages: [
+      { role: "user", content: inputs }
+    ],
+    max_tokens: maxTokens || 2048,
+    temperature: temperature || 0.7,
+  };
 
-      <div className="space-y-6">
-        {quiz.map((item, index) => (
-          <div
-            key={index}
-            className="bg-white rounded-lg shadow-sm border border-slate-200 p-6"
-          >
-            <h3 className="text-lg font-semibold text-gray-900 mb-4">
-              {index + 1}. {item.question}
-            </h3>
-            <div className="space-y-2">
-              {item.options.map((option, i) => (
-                <button
-                  key={i}
-                  onClick={() => handleAnswerClick(index, option)}
-                  disabled={selectedAnswers[index] !== undefined}
-                  className={`
-                    w-full p-3 rounded-md border text-left transition-colors
-                    ${getButtonClass(index, option)}
-                  `}
-                >
-                  <span className="flex items-center">
-                    {selectedAnswers[index] !== undefined &&
-                      item.correctAnswer === option && (
-                        <span className="w-4 h-4 mr-2">✓</span>
-                      )}
-                    {selectedAnswers[index] === option &&
-                      item.correctAnswer !== option && (
-                        <span className="w-4 h-4 mr-2">X</span>
-                      )}
-                    {option}
-                  </span>
-                </button>
-              ))}
-            </div>
-            {selectedAnswers[index] !== undefined && (
-              <div className="mt-4 p-3 bg-blue-100 border border-blue-200 rounded-md">
-                <p className="font-semibold text-blue-800">Объяснение:</p>
-                <p className="text-sm text-gray-800">{item.explanation}</p>
-              </div>
-            )}
-          </div>
-        ))}
-      </div>
-
-      {allAnswered && (
-        <div className="mt-8 p-4 bg-green-100 rounded-lg text-center">
-          <h3 className="text-xl font-bold">Результат: {correctCount} / {total}</h3>
-        </div>
-      )}
-
-      <div className="text-center mt-8">
-        <button
-          onClick={resetQuiz}
-          className="font-bold text-white bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-md text-center transition-colors inline-flex items-center"
-        >
-          <span className="mr-2">↻</span>
-          Сбросить тест
-        </button>
-      </div>
-    </div>
-  );
-}
-
-export async function getStaticPaths() {
-  let lessons = [];
-  try {
-    const jsonPath = path.join(process.cwd(), 'public', 'lessons', 'index.json');
-    const data = fs.readFileSync(jsonPath, 'utf-8');
-    lessons = JSON.parse(data);
-  } catch (e) {
-    console.warn("index.json not found for getStaticPaths in Test");
-  }
-
-  const paths = lessons.map(lesson => ({
-    params: { slug: lesson.slug },
-  }));
-
-  return { paths, fallback: 'blocking' };
-}
-
-export async function getStaticProps({ params }) {
-  const { slug } = params;
-  let quiz: QuizItem[] = [];
-  try {
-    const jsonPath = path.join(process.cwd(), 'public', 'content', 'quizzes', `${slug}-quiz.json`);  // Исправленный путь: ${slug}-quiz.json
-    if (fs.existsSync(jsonPath)) {
-      const data = fs.readFileSync(jsonPath, 'utf-8');
-      quiz = JSON.parse(data);
-    } else {
-      console.warn(`Quiz file not found: ${jsonPath}`);
-    }
-  } catch (e) {
-    console.error(`Error loading quiz for slug: ${slug}`, e.message);
-  }
-
-  return {
-    props: {
-      quiz,
-      lessonSlug: slug,
+  const hfResponse = await fetch(url, {
+    method: "POST",
+    headers: {
+      "Authorization": `Bearer ${hfToken}`,
+      "Content-Type": "application/json"
     },
-  };
+    body: JSON.stringify(body)
+  });
+
+  const data = await hfResponse.json();
+
+  if (!hfResponse.ok) {
+    console.error("HF API Error:", data);
+    throw new Error(`Hugging Face API error: ${data.error || hfResponse.statusText}`);
+  }
+
+  const message = data.choices?.[0]?.message?.content || "";
+  
+  if (!message) {
+     throw new Error("Hugging Face API returned an empty response.");
+  }
+  
+  return message;
 }
-
-export default TestPage;
-```
-
-### Дополнительные рекомендации
-- **Тестирование:** После замены запусти `npm run generate-lessons` (если есть уроки), затем `npm run dev`. Перейди на /Theory/lesson-1 (если slug="lesson-1"), и оттуда на тест — должно работать.
-- **Если slug не начинается с "lesson-"**: Если уроки названы просто "1.docx" (slug="1"), то quiz должен быть "1-quiz.json". Но в твоём примере — lesson-1, так что подправь имена файлов уроков соответственно.
-- **Обновления версий:** В package.json я поставил Next.js 15.0.0-rc.0, но на 08.11.2025 стабильная версия — 15.0.1 или выше. Если нужно, обнови вручную: `npm update next`.
-- **Другие файлы:** Если хочешь исправления в других (например, добавить streaming в proxy.js или IndexedDB в Chat.tsx), дай знать — предоставлю полный код.
-
-Если это решает проблему, дай фидбек! 😊
