--- a/package.json
+++ b/package.json
@@ -1,3 +1,52 @@
+{
+  "name": "blonding-app-v2.1",
+  "version": "2.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "generate-lessons": "node scripts/generate-md.js",
+    "lint": "next lint",
+    "generate-quizzes": "node scripts/generate-quizzes.js",
+    "generate-all": "npm run generate-lessons && npm run generate-quizzes"
+  },
+  "dependencies": {
+    "next": "15.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-markdown": "9.0.1",
+    "tailwindcss": "3.4.10",
+    "postcss": "8.4.45",
+    "autoprefixer": "10.4.20",
+    "mammoth": "^1.8.0",
+    "sharp": "^0.33.5",
+    "next-pwa": "^5.6.0",
+    "lru-cache": "^10.4.3",
+    "@tailwindcss/typography": "^0.5.15"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.1",
+    "@types/node": "^22.6.0",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.12.0",
+    "eslint-config-next": "15.0.1",
+    "turndown": "^7.1.3"
+  }
+}
+```eof
+
+---
+
+### Шаг 2: Создайте `src/lib/ai.js` (Обязательно)
+
+Тот JavaScript-код, который вы по ошибке вставили в `package.json`, на самом деле должен быть в этом файле. Ваш скрипт `generate-quizzes.js` ищет этот файл.
+
+Пожалуйста, **создайте** файл `src/lib/ai.js` (в папке `src`, создайте папку `lib`, если ее нет) и вставьте в него этот **JavaScript-код**:
+
+```javascript:src/lib/ai.js (Необходимый файл):src/lib/ai.js
 /**
  * Централизованная функция для вызовов Hugging Face API.
  */
@@ -43,3 +92,12 @@ export async function callHF(inputs, { hfToken, model, maxTokens, temperature })
   
   return message;
 }
+```eof
+
+### Что делать:
+
+1.  **Замените** `package.json` на **JSON-код** из Шага 1.
+2.  **Создайте** `src/lib/ai.js` и вставьте в него **JavaScript-код** из Шага 2.
+3.  **Закоммитьте** оба этих изменения.
+
+После этого ваш GitHub Action должен заработать.
