--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
     "build": "next build",
     "start": "next start",
     "generate-lessons": "node scripts/generate-md.js",
-    "lint": "next lint",
     "generate-quizzes": "node scripts/generate-quizzes.js",
-    "generate-all": "npm run generate-lessons && npm run generate-quizzes"
+    "generate-all": "npm run generate-lessons && npm run generate-quizzes",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "10.4.20",
+    "lru-cache": "^10.4.3",
+    "mammoth": "^1.8.0",
     "next": "15.0.1",
+    "next-pwa": "^5.6.0",
+    "postcss": "8.4.45",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
-    "tailwindcss": "3.4.10",
-    "postcss": "8.4.45",
-    "autoprefixer": "10.4.20",
-    "mammoth": "^1.8.0",
     "sharp": "^0.33.5",
-    "next-pwa": "^5.6.0",
-    "lru-cache": "^10.4.3",
-    "@tailwindcss/typography": "^0.5.15"
+    "tailwindcss": "3.4.10"
   },
   "devDependencies": {
-    "typescript": "^5.7.1",
     "@types/node": "^22.6.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "eslint": "^9.12.0",
     "eslint-config-next": "15.0.1",
-    "turndown": "^7.1.3"
+    "turndown": "^7.1.3",
+    "typescript": "^5.7.1"
   }
 }
