--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "generate-lessons": "node scripts/generate-md.js",
     "generate-quizzes": "node scripts/generate-quizzes.js",
     "generate-all": "npm run generate-lessons && npm run generate-quizzes",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -24,15 +25,20 @@
     "react-dom": "18.3.1",
     "react-markdown": "9.0.1",
     "sharp": "^0.33.5",
-    "tailwindcss": "3.4.10"
+    "tailwindcss": "3.4.10",
+    "turndown": "^7.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.6.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/turndown": "^5.0.5",
     "eslint": "^9.12.0",
     "eslint-config-next": "15.0.1",
-    "turndown": "^7.1.3",
     "typescript": "^5.7.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
