--- a/.github/workflows/auto-process.yml
+++ b/.github/workflows/auto-process.yml
@@ -27,7 +27,10 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm install --legacy-peer-deps
+
+      - name: Update lock file
+        run: npm install
 
       - name: Generate lessons
         run: npm run generate-lessons
