--- a/.github/workflows/auto-process.yml
+++ b/.github/workflows/auto-process.yml
@@ -28,7 +28,7 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: Generate lessons from DOCX
         run: npm run generate-lessons
