--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,26 @@
 {
-  "background_color": "#78307a",
-  "dir": "ltr",
-  "display": "standalone",
-  "name": "blonding-app-v2-1.vercel",
-  "orientation": "any",
-  "scope": "/",
-  "short_name": "blonding-app-v2-1.vercel",
+  "name": "Blonding App v2.2",
+  "short_name": "Blonding",
+  "description": "PWA для обучения техникам блондирования с AI-генерацией тестов",
   "start_url": "/",
-  "theme_color": "#8b8c3a"
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#8b5cf6",
+  "orientation": "portrait-primary",
+  "categories": ["education", "business"],
+  "lang": "ru-RU",
+  "icons": [
+    {
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ]
 }
