--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate-all && next build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
