--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "generate-lessons": "node scripts/generate-md.js",
-    "generate-quizzes": "node scripts/generate-quizzes.js --force",
+    "generate-quizzes": "node scripts/generate-quizzes.js",
     "generate-all": "npm run generate-lessons && npm run generate-quizzes",
     "test-quiz": "node -e \"import('./scripts/generate-quizzes.js').then(m => m.generateAllQuizzes())\"",
     "validate-token": "node -e \"import('./src/lib/ai.js').then(m => m.validateHFToken(process.env.HF_TOKEN)).then(console.log)\"",
