feat: Реализован механизм автоматического обновления PWA
- Добавлен custom service worker с версионированием
- Создан React hook для управления lifecycle SW
- Реализован премиум UI компонент UpdateNotification
- Добавлен скрипт автоматической синхронизации версий
- Настроен контролируемый процесс обновления (skipWaiting: false)
- Добавлена автопроверка обновлений каждые 60 секунд

Решает проблему с обновлением APK приложения из PWABuilder

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "npm run generate-all && next build",
+    "build": "npm run sync-version && npm run generate-all && next build",
+    "sync-version": "node scripts/sync-version.js",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
