--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blonding-app-v2.2",
-  "version": "2.2.3",
+  "version": "2.2.5",
   "description": "PWA для обучения техникам блондирования с AI-генерацией тестов",
   "private": true,
   "type": "module",
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "npm run sync-version && npm run generate-all && next build",
+    "build": "npm run sync-version && npm run generate-lessons && next build",
+    "build:with-quizzes": "npm run sync-version && npm run generate-all && next build",
     "sync-version": "node scripts/sync-version.js",
     "start": "next start",
     "lint": "next lint",
