--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,19 @@
       ]
     },
     {
+      "source": "/sw-custom.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "CDN-Cache-Control",
+          "value": "max-age=0"
+        }
+      ]
+    },
+    {
       "source": "/manifest.json",
       "headers": [
         {
