fix: Удаление сгенерированных папок уроков из Git
- Удалены все папки public/lessons/urok-*/ из репозитория
- Добавлены в .gitignore (теперь генерируются только при билде)
- Исправлена проблема дублирования уроков на Vercel (было 8, должно быть 6)
- Папки генерируются из lessons/source/*.docx при каждом деплое

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ node_modules
 .DS_Store
 tsconfig.tsbuildinfo
 
+# Генерируемые папки уроков (создаются при билде из lessons/source/*.docx)
+public/lessons/urok-*/
