fix: Updated PWA manifest for PWABuilder v2.2.7
- Added mobile and desktop screenshots for manifest
- Fixed screenshot paths to existing files (resolved 404 errors)
- Added wide form_factor screenshots for desktop support
- Updated version to 2.2.7 in package.json, manifest.json, sw-custom.js
- All PWABuilder critical issues resolved
- Ready for APK generation on PWABuilder

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Blonding App - Обучение Блондированию",
   "short_name": "Blonding",
-  "version": "2.2.6",
+  "version": "2.2.7",
   "description": "PWA для обучения техникам блондирования с AI-консультантом и интерактивными тестами",
   "id": "blonding-app-v2.2",
   "start_url": "/?source=pwa",
@@ -86,16 +86,32 @@
   ],
   "screenshots": [
     {
-      "src": "/lessons/urok-1-podgotovka-klienta-k-blondirovaniyu/images/image-2.jpeg",
+      "src": "/screenshot-mobile-1.jpeg",
       "type": "image/jpeg",
       "sizes": "410x547",
-      "form_factor": "narrow"
+      "form_factor": "narrow",
+      "label": "App main screen with lessons"
     },
     {
-      "src": "/lessons/urok-3-op-bonusnyi-urok/images/image-1.jpeg",
+      "src": "/screenshot-mobile-2.jpeg",
       "type": "image/jpeg",
-      "sizes": "648x648",
-      "form_factor": "narrow"
+      "sizes": "508x677",
+      "form_factor": "narrow",
+      "label": "Lesson content view"
+    },
+    {
+      "src": "/screenshot-desktop-1.png",
+      "type": "image/png",
+      "sizes": "1024x1024",
+      "form_factor": "wide",
+      "label": "Desktop view - Lessons grid"
+    },
+    {
+      "src": "/screenshot-desktop-2.png",
+      "type": "image/png",
+      "sizes": "1024x1024",
+      "form_factor": "wide",
+      "label": "Desktop view - AI Chat"
     }
   ],
   "shortcuts": [
