feat: добавлены юнит-тесты Jest для quiz loading и lesson validation (12 тестов)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "generate-all": "npm run generate-lessons",
     "validate-token": "node -e \"import('./src/lib/ai.js').then(m => m.validateHFToken(process.env.HF_TOKEN)).then(console.log)\"",
     "clean-cache": "rm -rf .next/cache && rm -rf node_modules/.cache",
-    "ci:install": "npm ci --legacy-peer-deps"
+    "ci:install": "npm ci --legacy-peer-deps",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -40,12 +43,15 @@
   },
   "devDependencies": {
     "@bubblewrap/cli": "^1.24.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.6.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/turndown": "^5.0.5",
     "eslint": "^9.12.0",
     "eslint-config-next": "15.0.1",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.7.1"
   }
 }
